--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<link href="CSS/style.css" rel="stylesheet" type="text/css">
+<link href="style.css" rel="stylesheet" type="text/css">
   <head>
     <meta charset="utf-8">
     <title>✉Contact</title>
